fix: On mobile view, when there is no line, the topmost items should have no top padding, and the bottommost items should have no bottom padding; only the component’s original padding values should remain at the top and bottom

--- a/editor-components/feature/feature42/feature42.module.scss
+++ b/editor-components/feature/feature42/feature42.module.scss
@@ -256,13 +256,22 @@
             flex-direction: column;
             gap: 0;
 
-            .card-content {
+            &.enable-line {
                 gap: var(--composer-gap-md);
-                flex-direction: column;
+
+                .card-content {
+                    .mobile-title-wrapper {
+                        padding: 0;
+                    }
+                }
+            }
+
+            .card-content {
                 display: flex;
                 position: relative;
                 opacity: 1;
                 height: auto;
+                gap: 0;
 
                 .mobile-title-wrapper {
                     display: flex;
